--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,8 @@ if(BUILD_TESTING)
       simple_test_delete.c
       test_gc.c
       test_leaf_root_delete_get_scan.c
-      test_region_allocations.c)
+      test_region_allocations.c
+      test_par_format.c)
 
   set_source_files_properties(${LIB_TEST_FILES} COMPILE_FLAGS "-O3")
 
@@ -103,6 +104,11 @@ if(BUILD_TESTING)
   add_executable(test_optional_logging test_optional_logging.c)
   add_test(NAME test_optional_logging
            COMMAND $<TARGET_FILE:test_optional_logging>)
+
+  add_executable(test_par_format test_par_format.c arg_parser.c)
+  target_link_libraries(test_par_format "${PROJECT_NAME}" ${DEPENDENCIES})
+  add_test(NAME test_par_format COMMAND $<TARGET_FILE:test_par_format>
+                                        --file=${FILEPATH})
 
   add_subdirectory(Surrogates)
 endif()
