--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -84,13 +84,18 @@ if(BUILD_TESTING)
   add_test(NAME test_gc COMMAND $<TARGET_FILE:test_gc> --file=${FILEPATH}
                                 --num_of_kvs=1000000)
 
-  add_executable(test_medium test_medium.c arg_parser.c)
-  target_link_libraries(test_medium "${PROJECT_NAME}" ${DEPENDENCIES})
+  add_executable(test_mixes test_mixes.c arg_parser.c)
+  target_link_libraries(test_mixes "${PROJECT_NAME}" ${DEPENDENCIES})
   add_test(
-    NAME test_medium
+    NAME test_mixes_all_medium
     COMMAND
-      $<TARGET_FILE:test_medium> --file=/tmp/kv_store.dat --num_of_kvs=1000000
-      --small_kv_percentage=10 --medium_kv_percentage=80 --big_kv_percentage=10)
+      $<TARGET_FILE:test_mixes> --file=/tmp/kv_store.dat --num_of_kvs=1000000
+      --small_kv_percentage=0 --medium_kv_percentage=100 --big_kv_percentage=0)
+  add_test(
+    NAME test_mixes_most_small_few_medium
+    COMMAND
+      $<TARGET_FILE:test_mixes> --file=/tmp/kv_store.dat --num_of_kvs=1000000
+      --small_kv_percentage=99 --medium_kv_percentage=1 --big_kv_percentage=0)
 
   add_executable(simple_test_delete simple_test_delete.c arg_parser.c)
   target_link_libraries(simple_test_delete "${PROJECT_NAME}" ${DEPENDENCIES})
