--- a/scripts/CI/yml/release-test.yml
+++ b/scripts/CI/yml/release-test.yml
@@ -299,3 +299,27 @@ release_test_par_put_serialized:
         - make test_par_put_serialized;cd tests;
         - ctest -R ^test_par_put_serialized$
     needs: [release_build_gcc, release_build_clang]
+
+release_test_mixes_all_medium:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    <<: *release_build_commands
+    tags:
+        - kubernetes
+    script:
+        - make test_mixes;make kv_format.parallax;cd tests;
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
+        - ctest -R ^test_mixes_all_medium$
+    needs: [release_build_gcc,release_build_clang]
+
+release_test_mixes_most_small_few_medium:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    <<: *release_build_commands
+    tags:
+        - kubernetes
+    script:
+        - make test_mixes;make kv_format.parallax;cd tests;
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
+        - ctest -R ^test_mixes_most_small_few_medium$
+    needs: [release_build_gcc,release_build_clang]
