[fix] Fix array-no-compare in YCSB

--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -1,9 +1,13 @@
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include_directories(BEFORE core db ../lib)
 
-add_executable(ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
-                        driver/ycsbc.cc ../utilities/list.c)
+add_executable(
+  ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
+  driver/ycsbc.cc ../utilities/list.c
+)
 target_link_libraries(ycsb-edb "${PROJECT_NAME}" ${DEPENDENCIES})
+target_compile_options(ycsb-edb PUBLIC "-Wno-array-compare")
+
 
 if(BUILD_TESTING)
   find_program(BASH_PROGRAM bash)
@@ -21,7 +25,8 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    ld)
+    ld
+  )
   add_test(
     test_large
     ${BASH_PROGRAM}
@@ -29,7 +34,8 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    l)
+    l
+  )
   add_test(
     test_mediumd
     ${BASH_PROGRAM}
@@ -37,7 +43,8 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    md)
+    md
+  )
   add_test(
     test_medium
     ${BASH_PROGRAM}
@@ -45,7 +52,8 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    m)
+    m
+  )
   add_test(
     test_smalld
     ${BASH_PROGRAM}
@@ -53,7 +61,8 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    sd)
+    sd
+  )
   add_test(
     test_small
     ${BASH_PROGRAM}
@@ -61,5 +70,6 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    s)
+    s
+  )
 endif()
