[fix] Fix release build clang

--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(
   driver/ycsbc.cc ../utilities/list.c
 )
 target_link_libraries(ycsb-edb "${PROJECT_NAME}" ${DEPENDENCIES})
-target_compile_options(ycsb-edb PUBLIC "-Wno-array-compare")
+target_compile_options(ycsb-edb PUBLIC "-Wno-deprecated-array-compare")
 
 
 if(BUILD_TESTING)
