[fix] Fix pre-commit hooks

--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -2,12 +2,11 @@ include(CheckCXXCompilerFlag)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include_directories(BEFORE core db ../lib)
 
-add_executable(
-  ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
-  driver/ycsbc.cc ../utilities/list.c
-)
+add_executable(ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
+                        driver/ycsbc.cc ../utilities/list.c)
 target_link_libraries(ycsb-edb "${PROJECT_NAME}" ${DEPENDENCIES})
-check_cxx_compiler_flag("-Wno-deprecated-array-compare" DEPRECATED_ARRAY_COMPARE)
+check_cxx_compiler_flag("-Wno-deprecated-array-compare"
+                        DEPRECATED_ARRAY_COMPARE)
 if(DEPRECATED_ARRAY_COMPARE)
   string(APPEND CMAKE_CXX_FLAGS " -Wno-deprecated-array-compare")
 endif()
@@ -15,7 +14,6 @@ check_cxx_compiler_flag("-Wno-array-compare" ARRAY_COMPARE)
 if(ARRAY_COMPARE)
   string(APPEND CMAKE_CXX_FLAGS " -Wno-array-compare")
 endif()
-
 
 if(BUILD_TESTING)
   find_program(BASH_PROGRAM bash)
@@ -33,8 +31,7 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    ld
-  )
+    ld)
   add_test(
     test_large
     ${BASH_PROGRAM}
@@ -42,8 +39,7 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    l
-  )
+    l)
   add_test(
     test_mediumd
     ${BASH_PROGRAM}
@@ -51,8 +47,7 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    md
-  )
+    md)
   add_test(
     test_medium
     ${BASH_PROGRAM}
@@ -60,8 +55,7 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    m
-  )
+    m)
   add_test(
     test_smalld
     ${BASH_PROGRAM}
@@ -69,8 +63,7 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    sd
-  )
+    sd)
   add_test(
     test_small
     ${BASH_PROGRAM}
@@ -78,6 +71,5 @@ if(BUILD_TESTING)
     ${FILEPATH}
     ${RECORD_COUNT}
     ${OPERATION_COUNT}
-    s
-  )
+    s)
 endif()
