[fix] Address review comments

--- a/scripts/CI/yml/release-test.yml
+++ b/scripts/CI/yml/release-test.yml
@@ -133,6 +133,21 @@ release_test_dirty_scans_smalld:
         - ctest -R ^test_dirty_scans_smalld$
     needs: [release_build_gcc, release_build_clang]
 
+
+release_test_dirty_scans_smalld_greater:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    <<: *release_build_commands
+    tags:
+        - kubernetes
+    script:
+        - make test_dirty_scans;make kv_format.parallax;cd tests;
+        - ./mkfs.sh "$NVME0/$CI_JOB_ID"/kv_store.dat 128
+        - ctest -R ^test_dirty_scans_smalld_greater$
+    when: manual
+    needs: [release_build_gcc, release_build_clang]
+
+
 release_test_dirty_scans_mediumd:
     image: carvicsforth/arch_carv:latest
     stage: release_test
