--- a/scripts/CI/yml/debug-test.yml
+++ b/scripts/CI/yml/debug-test.yml
@@ -360,3 +360,14 @@ debug_test_mixes_most_small_few_medium:
         - make test_mixes;make kv_format.parallax;cd tests;
         - ctest -R ^test_mixes_most_small_few_medium$
     needs: [debug_build_gcc, debug_build_clang]
+
+debug_test_mixes_all_categories:
+    image: carvicsforth/arch_carv:latest
+    stage: debug_test
+    <<: *debug_build_commands
+    tags:
+        - kubernetes
+    script:
+        - make test_mixes;make kv_format.parallax;cd tests;
+        - ctest -R ^test_mixes_all_categories$
+    needs: [debug_build_gcc, debug_build_clang]
