--- a/scripts/CI/yml/debug-test.yml
+++ b/scripts/CI/yml/debug-test.yml
@@ -339,35 +339,35 @@ debug_test_par_put_serialized:
         - ctest -R ^test_par_put_serialized$
     needs: [debug_build_gcc, debug_build_clang]
 
-debug_test_mixes_all_medium:
+debug_test_mixes_all_100_medium:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - make test_mixes;make kv_format.parallax;cd tests;
-        - ctest -R ^test_mixes_all_medium$
+        - make test_mixes;cd tests;
+        - ctest -R ^test_mixes_100_medium$
     needs: [debug_build_gcc, debug_build_clang]
 
-debug_test_mixes_most_small_few_medium:
+debug_test_mixes_99_small_1_medium:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - make test_mixes;make kv_format.parallax;cd tests;
-        - ctest -R ^test_mixes_most_small_few_medium$
+        - make test_mixes;cd tests;
+        - ctest -R ^test_mixes_99_small_1_medium$
     needs: [debug_build_gcc, debug_build_clang]
 
-debug_test_mixes_all_categories:
+debug_test_mixes_45_small_50_medium_5_big:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     <<: *debug_build_commands
     tags:
         - kubernetes
     script:
-        - make test_mixes;make kv_format.parallax;cd tests;
-        - ctest -R ^test_mixes_all_categories$
+        - make test_mixes;cd tests;
+        - ctest -R ^test_mixes_45_small_50_medium_5_big$
     needs: [debug_build_gcc, debug_build_clang]
