--- a/scripts/CI/yml/release-test.yml
+++ b/scripts/CI/yml/release-test.yml
@@ -300,35 +300,35 @@ release_test_par_put_serialized:
         - ctest -R ^test_par_put_serialized$
     needs: [release_build_gcc, release_build_clang]
 
-release_test_mixes_all_medium:
+release_test_mixes_100_medium:
     image: carvicsforth/arch_carv:latest
     stage: release_test
     <<: *release_build_commands
     tags:
         - kubernetes
     script:
-        - make test_mixes;make kv_format.parallax;cd tests;
-        - ctest -R ^test_mixes_all_medium$
+        - make test_mixes;cd tests;
+        - ctest -R ^test_mixes_100_medium$
     needs: [release_build_gcc, release_build_clang]
 
-release_test_mixes_most_small_few_medium:
+release_test_mixes_99_small_1_medium:
     image: carvicsforth/arch_carv:latest
     stage: release_test
     <<: *release_build_commands
     tags:
         - kubernetes
     script:
-        - make test_mixes;make kv_format.parallax;cd tests;
-        - ctest -R ^test_mixes_most_small_few_medium$
+        - make test_mixes;cd tests;
+        - ctest -R ^test_mixes_99_small_1_medium$
     needs: [release_build_gcc, release_build_clang]
 
-release_test_mixes_all_categories:
+release_test_45_small_50_medium_5_big:
     image: carvicsforth/arch_carv:latest
     stage: release_test
     <<: *release_build_commands
     tags:
         - kubernetes
     script:
-        - make test_mixes;make kv_format.parallax;cd tests;
-        - ctest -R ^test_mixes_all_categories$
+        - make test_mixes;cd tests;
+        - ctest -R ^test_mixes_45_small_50_medium_5_big$
     needs: [release_build_gcc, release_build_clang]
