--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -88,21 +88,21 @@ if(BUILD_TESTING)
   target_link_libraries(test_mixes "${PROJECT_NAME}" ${DEPENDENCIES})
 
   add_test(
-    NAME test_mixes_all_medium
+    NAME test_mixes_100_medium
     COMMAND
       $<TARGET_FILE:test_mixes> --file=${FILEPATH} --num_of_kvs=1000000
       --small_kv_percentage=0 --medium_kv_percentage=100 --big_kv_percentage=0)
 
   add_test(
-    NAME test_mixes_most_small_few_medium
+    NAME test_mixes_99_small_1_medium
     COMMAND
       $<TARGET_FILE:test_mixes> --file=${FILEPATH} --num_of_kvs=1000000
       --small_kv_percentage=99 --medium_kv_percentage=1 --big_kv_percentage=0)
 
   add_test(
-    NAME test_mixes_all_categories
+    NAME test_mixes_45_small_50_medium_5_big
     COMMAND
-      $<TARGET_FILE:test_mixes> --file=${FILEPATH} --num_of_kvs=10000000
+      $<TARGET_FILE:test_mixes> --file=${FILEPATH} --num_of_kvs=1000000
       --medium_kv_percentage=50 --small_kv_percentage=45 --big_kv_percentage=5)
 
   add_executable(simple_test_delete simple_test_delete.c arg_parser.c)
