--- a/tracer/CMakeLists.txt
+++ b/tracer/CMakeLists.txt
@@ -7,4 +7,6 @@ if(BUILD_TESTING)
   add_executable(tracer tracer.c ../tests/arg_parser.c)
   target_link_libraries(tracer "${PROJECT_NAME}" ${DEPENDENCIES})
 
+  add_test(NAME tracer COMMAND ./tracer --file=${FILEPATH} --tracefile=../../tracer/dummy_tracefile.txt)
+
 endif()
