--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -37,6 +37,7 @@ set(LIB_C_SOURCE_FILES
     btree/segment_allocator.c
     btree/set_options.c
     common/common.c
+    common/common_functions.c
     scanner/min_max_heap.c
     scanner/scanner.c
     scanner/stack.c)
