[fix] Use CMAKE_CURRECT_SOURCE_DIR for tracer

--- a/cmake_utils/tracer.cmake.in
+++ b/cmake_utils/tracer.cmake.in
@@ -1,2 +1,2 @@
-file(COPY ${CMAKE_SOURCE_DIR}/options.yml
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/options.yml
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/tracer/)
