[fix] Fix pre-commit CI Job

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,10 +35,8 @@ if(BUILD_TESTING)
 
   if(BDB_LIBRARY)
 
-  add_test(
-    NAME tiresias
-    COMMAND
-      $<TARGET_FILE:tiresias> --file=${FILEPATH} --num_of_kvs=4000000)
+    add_test(NAME tiresias COMMAND $<TARGET_FILE:tiresias> --file=${FILEPATH}
+                                   --num_of_kvs=4000000)
     add_executable(tiresias tiresias.c arg_parser.c)
     target_link_libraries(tiresias "${PROJECT_NAME}" ${DEPENDENCIES}
                           ${BDB_LIBRARY})
