[refactor] Transfer kv_pairs.* into btree dir

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -36,8 +36,8 @@ set(LIB_C_SOURCE_FILES
     btree/medium_log_LRU_cache.c
     btree/segment_allocator.c
     btree/set_options.c
+    btree/kv_pairs.c
     common/common.c
-    common/kv_pairs.c
     scanner/min_max_heap.c
     scanner/scanner.c
     scanner/stack.c)
