[test] Enhance tiresia to use prepopulated BDB

--- a/scripts/CI/yml/debug-test.yml
+++ b/scripts/CI/yml/debug-test.yml
@@ -3,7 +3,7 @@
     before_script:
         - ./scripts/CI/create_mbbd.sh
         - mkdir -p build;cd build
-        - cmake ..
+        - cmake .. -DBDB_PATH=/BDB/TIRESIAS
     after_script:
         - ./scripts/CI/destroy_mbbd.sh
 
