--- a/scripts/CI/yml/release-test.yml
+++ b/scripts/CI/yml/release-test.yml
@@ -3,7 +3,7 @@
     before_script:
         - ./scripts/CI/create_mbbd.sh
         - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - cmake .. -DCMAKE_BUILD_TYPE="Release" -DBDB_PATH=/BDB/TIRESIAS
     after_script:
         - ./scripts/CI/destroy_mbbd.sh
 
