--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,10 +34,10 @@ if(BUILD_TESTING)
     NAMES libdb.so
     PATHS ${bdb_LIB_PATHS})
 
-  if(BDB_LIBRARY)
+  if(BDB_LIBRARY AND NOT ${BDB_PATH} STREQUAL "")
 
     add_test(NAME tiresias COMMAND $<TARGET_FILE:tiresias> --file=${FILEPATH}
-                                   --num_of_kvs=4000000)
+                                   --num_of_kvs=4000000 --BDB_path=${BDB_PATH})
     add_executable(tiresias tiresias.c arg_parser.c)
     target_link_libraries(tiresias "${PROJECT_NAME}" ${DEPENDENCIES}
                           ${BDB_LIBRARY})
