[WIP] First partial version of Bloom Filters in Parallax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,11 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
                                                "MinSizeRel" "RelWithDebInfo")
 endif()
 
+message(
+  STATUS
+    "build type is '${default_build_type}' and cmake build type is '${CMAKE_BUILD_TYPE}'."
+)
+
 if(DISABLE_LOGGING)
   add_definitions(-DDISABLE_LOGGING)
 endif()
@@ -82,7 +87,7 @@ FetchContent_Declare(
 
 FetchContent_Declare(
   libbloom
-  GIT_REPOSITORY https://github.com/innerout/libbloom
+  GIT_REPOSITORY https://github.com/gesalous/libbloom
   GIT_TAG cmake)
 
 FetchContent_GetProperties(log)
@@ -128,6 +133,9 @@ set(DEPENDENCIES log yaml libbloom)
 
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utilities)
+
+add_compile_definitions(
+  DB_CONFIG_FILE="${CMAKE_CURRENT_SOURCE_DIR}/options.yml")
 
 if(TREAT_WARNINGS_AS_ERRORS)
   string(APPEND CMAKE_C_FLAGS " -Werror")
